<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MenuSensoresActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="metListaSensores"
        android:text="@string/ListaSensores" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="metLuz"
        android:text="@string/Luz" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="metAcelerometro"
        android:text="@string/Acelerometro" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="metGiroscopio"
        android:text="@string/Giroscopio" />

</LinearLayout>